improving the models

--- a/src/ModelBuilder.ipynb
+++ b/src/ModelBuilder.ipynb
@@ -61,6 +61,8 @@
     "\n",
     "7. **Model Training and Evaluation**: Finally, the model is trained using the training data and evaluated on the test set. The results (e.g., accuracy, precision, recall, f1-score, etc.) are then reported.\n",
     "\n",
+    "8. **Improving the Model**: Based on the results, we can go back to previous steps and make adjustments to improve the model's performance. For example, we can try different models, change the hyperparameters, or perform more feature engineering.\n",
+    "\n",
     "Each step in this pipeline is crucial and can have a significant impact on the performance of the final model. It's also worth noting that this is an iterative process. Based on the model's performance, you might need to revisit and adjust previous steps.\n"
    ]
   },
@@ -627,7 +629,9 @@
     "\n",
     "Remember, there is no one-size-fits-all algorithm or model in machine learning. The best approach often depends on the specific problem, the available data, and the context.\n",
     "\n",
-    "Below we show how to set up RandomForest classifier models using sklearn, imblearn, and xgboost library implementations."
+    "Below we show how to set up RandomForest classifier models using sklearn, imblearn, and xgboost library implementations. In this example we are comparing different random forest implementations provided by different libraries. We will use the same hyperparameters for all the models. We will also use the same train and test data for all the models. We will use the same random_state.  \n",
+    "\n",
+    "It is up to the ML model developer to determine what approach to use, they could focus on a single model and conduct hyperparameter tuning on it, or they could try different models and then conduct hyperparameter tuning on the best performing model."
    ]
   },
   {
@@ -693,7 +697,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 6. Model Training\n",
+    "# 7. Model Training\n",
     "\n",
     "Here we train the models using the fit() method using the training set"
    ]
@@ -778,7 +782,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 6. Model Evaluation\n",
+    "# 7. Model Evaluation\n",
     "\n",
     "We use the test set to evaluate our trained models"
    ]
@@ -1078,16 +1082,169 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "# 8. Improving the Models\n",
+    "\n",
+    "## Strategies to Improve Machine Learning Models\n",
+    "\n",
+    "1. **Feature Engineering**:\n",
+    "   - **Concept**: Feature engineering is the process of creating new features or transforming existing features to get the most out of your data. Good features can simplify the modeling process and improve model accuracy.\n",
+    "   - **Approaches**:\n",
+    "     - **Polynomial Features**: Generate new features by considering non-linear relationships.\n",
+    "     - **Binning/Bucketing**: Convert numerical variables into categorical ones by segmenting ranges.\n",
+    "     - **Feature Scaling**: Standardization (zero mean and unit variance) or Min-Max Scaling (scale features between 0 and 1).\n",
+    "     - **Domain-specific**: Based on the domain or business understanding, create features that might capture underlying patterns better.\n",
+    "     \n",
+    "2. **Feature Selection**:\n",
+    "   - **Concept**: Not all features are equally important. Some may be redundant or even detrimental to performance. Feature selection methods aim to keep the most informative features.\n",
+    "   - **Approaches**:\n",
+    "     - **Correlation Coefficient**: Remove highly correlated features.\n",
+    "     - **Recursive Feature Elimination (RFE)**: Recursively remove attributes and build a model on attributes that remain.\n",
+    "     - **Feature Importance from Tree-based models**: Use models like Decision Trees or Random Forests to rank features by importance.\n",
+    "\n",
+    "3. **Hyperparameter Tuning**:\n",
+    "   - **Concept**: Models have various parameters that are not learned from the dataset directly but are set beforehand. These are called hyperparameters, and their tuning can significantly impact model performance.\n",
+    "   - **Approaches**:\n",
+    "     - **Grid Search**: Define a set of possible values for each hyperparameter and exhaustively test all possible combinations.\n",
+    "     - **Random Search**: Define a range for hyperparameters and randomly sample from these ranges.\n",
+    "     - **Bayesian Optimization**: Uses probability to find the minimum of a function, and can be more efficient than exhaustive search methods.\n",
+    "     \n",
+    "4. **Ensemble Modeling**:\n",
+    "   - **Concept**: Instead of relying on a single model, ensemble methods combine the predictions of multiple models to achieve better performance than any single model could.\n",
+    "   - **Approaches**:\n",
+    "     - **Bagging**: Bootstrap Aggregating involves training multiple instances of the same model on different subsets of data (e.g., Random Forests).\n",
+    "     - **Boosting**: Sequentially train models where each model corrects the errors of its predecessor (e.g., AdaBoost, Gradient Boosting, XGBoost).\n",
+    "     - **Stacking**: Train multiple models and use their predictions as input for a final 'meta-model' that makes the final prediction.\n",
+    "\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## [Scikit-learn Feature Selection Module](https://scikit-learn.org/stable/modules/classes.html#module-sklearn.feature_selection)\n",
+    "\n",
+    "### **Univariate Feature Selection**:\n",
+    "|Class|Description|\n",
+    "|--|--|\n",
+    "| `GenericUnivariateSelect`| A univariate feature selector with configurable strategy.|\n",
+    "| `SelectPercentile`| Selects features based on the top percentile of their scores.|\n",
+    "| `SelectKBest`| Selects features according to the k highest scores.|\n",
+    "| `SelectFpr`| Selects features with p-values below a threshold using a false positive rate (FPR) test.|\n",
+    "| `SelectFdr`| Filters based on an estimated false discovery rate.|\n",
+    "| `SelectFwe`| Selects features based on a family-wise error rate.|  \n",
+    "\n",
+    "<br>\n",
+    "<br>\n",
+    "\n",
+    "### **Model-based Feature Selection**:\n",
+    "|Class|Description|\n",
+    "|--|--|\n",
+    "| `SelectFromModel`| A meta-transformer that selects features based on their importance weights.|\n",
+    "| `SequentialFeatureSelector`| Performs Sequential Feature Selection.|\n",
+    "| `RFE`| Performs feature ranking with recursive feature elimination.|\n",
+    "| `RFECV`| Combines recursive feature elimination with cross-validation.|  \n",
+    "\n",
+    "<br>\n",
+    "<br>\n",
+    "\n",
+    "### **Variance-based Feature Selection**:\n",
+    "|Class|Description|\n",
+    "|--|--|\n",
+    "| `VarianceThreshold`| Removes all features with variance below a threshold.|  \n",
+    "\n",
+    "<br>\n",
+    "<br>\n",
+    "\n",
+    "### **Statistical Tests for Feature Selection**:\n",
+    "|Class|Description|\n",
+    "|--|--|\n",
+    "| `chi2`| Computes chi-squared stats between each non-negative feature and class.|\n",
+    "| `f_classif`| Computes the ANOVA F-value.|\n",
+    "| `f_regression`| Performs univariate linear regression tests.|\n",
+    "| `r_regression`| Computes Pearson's r correlation.|\n",
+    "| `mutual_info_classif`| Estimates mutual information for a discrete target variable.|\n",
+    "| `mutual_info_regression`| Estimates mutual information for a continuous target variable.|  \n",
+    "\n",
+    "<br>\n",
+    "<br>\n",
+    "\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## [SciKit-learn Hyperparameter optimizers](https://scikit-learn.org/stable/modules/classes.html#module-sklearn.model_selection)  \n",
+    "\n",
+    "|Class|Description|\n",
+    "|--|--|\n",
+    "| `GridSearchCV`| Exhaustive search over specified parameter values for an estimator. |\n",
+    "| `HalvingGridSearchCV`| Search over specified parameter values with successive halving. |\n",
+    "| `ParameterGrid`| Grid of parameters with a discrete number of values for each. |\n",
+    "| `ParameterSampler`| Generator on parameters sampled from given distributions. |\n",
+    "| `RandomizedSearchCV`| Randomized search on hyper parameters. |\n",
+    "| `HalvingRandomSearchCV`| Randomized search on hyper parameters. |  \n",
+    "\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## [Scikit-learn Ensemble Methods](https://scikit-learn.org/stable/modules/classes.html#module-sklearn.ensemble)\n",
+    "\n",
+    "### Boosting Methods\n",
+    "\n",
+    "| Class                                         | Description                                           |\n",
+    "|-----------------------------------------------|-------------------------------------------------------|\n",
+    "| `ensemble.AdaBoostClassifier`                 | An AdaBoost classifier combining multiple weak classifiers. |\n",
+    "| `ensemble.AdaBoostRegressor`                  | An AdaBoost regressor for regression tasks.           |\n",
+    "| `ensemble.GradientBoostingClassifier`         | Gradient Boosting for classification.                 |\n",
+    "| `ensemble.GradientBoostingRegressor`          | Gradient Boosting for regression tasks.               |\n",
+    "| `ensemble.HistGradientBoostingRegressor`      | Histogram-based Gradient Boosting Regression Tree.    |\n",
+    "| `ensemble.HistGradientBoostingClassifier`     | Histogram-based Gradient Boosting Classification Tree.|\n",
+    "\n",
+    "### Bagging Methods\n",
+    "\n",
+    "| Class                                         | Description                                           |\n",
+    "|-----------------------------------------------|-------------------------------------------------------|\n",
+    "| `ensemble.BaggingClassifier`                  | A Bagging classifier using multiple instances of a base estimator. |\n",
+    "| `ensemble.BaggingRegressor`                   | A Bagging regressor for regression tasks.             |\n",
+    "| `ensemble.RandomForestClassifier`             | A random forest classifier combining multiple decision trees. |\n",
+    "| `ensemble.RandomForestRegressor`              | A random forest regressor.                            |\n",
+    "| `ensemble.ExtraTreesClassifier`               | Extremely randomized trees classifier.                |\n",
+    "| `ensemble.ExtraTreesRegressor`                | Extremely randomized trees regressor.                 |\n",
+    "\n",
+    "### Stacking Methods\n",
+    "\n",
+    "| Class                                         | Description                                           |\n",
+    "|-----------------------------------------------|-------------------------------------------------------|\n",
+    "| `ensemble.StackingClassifier`                 | Stacks multiple classifiers with a final classifier.  |\n",
+    "| `ensemble.StackingRegressor`                  | Stacking for regression tasks.                        |\n",
+    "\n",
+    "### Voting Methods\n",
+    "\n",
+    "| Class                                         | Description                                           |\n",
+    "|-----------------------------------------------|-------------------------------------------------------|\n",
+    "| `ensemble.VotingClassifier`                   | Soft voting/majority rule classifier.                 |\n",
+    "| `ensemble.VotingRegressor`                    | Aggregates predictions from multiple regressors.      |\n",
+    "\n",
+    "### Miscellaneous\n",
+    "\n",
+    "| Class                                         | Description                                           |\n",
+    "|-----------------------------------------------|-------------------------------------------------------|\n",
+    "| `ensemble.IsolationForest`                    | Isolation Forest algorithm for anomaly detection.     |\n",
+    "| `ensemble.RandomTreesEmbedding`               | An ensemble of totally random trees.                  |\n",
+    "\n",
+    "Ensemble methods can significantly improve the performance of machine learning models by combining the strengths of various base models, leading to more robust and accurate predictions.\n"
+   ]
   }
  ],
  "metadata": {
