--- a/src/ModelBuilder.ipynb
+++ b/src/ModelBuilder.ipynb
@@ -293,7 +293,7 @@
     "\n",
     "Let's take an example of a feature named \"Color\". This feature has three categories: \"Red\", \"Green\", and \"Blue\". One-hot encoding this feature would result in three new features: \"Is_Red\", \"Is_Green\", and \"Is_Blue\". If an instance of our data had \"Color\" = \"Red\", then \"Is_Red\" would be 1, while \"Is_Green\" and \"Is_Blue\" would both be 0.\n",
     "\n",
-    "So, in summary, one-hot encoding transforms a categorical feature with n categories into n binary features, with only one active.\n",
+    "In summary, one-hot encoding transforms a categorical feature with n categories into n binary features, with only one active.\n",
     "\n",
     "This method is widely used because it doesn't assume any order of the categories, which can be very helpful when the categorical feature is nominal (i.e., there's no inherent order among the categories). However, it can increase the dimensionality of the dataset dramatically if the categorical feature has many unique categories, which can potentially lead to the curse of dimensionality. This is a situation where the feature space is so high that the learning becomes much harder.\n",
     "\n",
@@ -478,7 +478,7 @@
     "\n",
     "6. **Imputation Using Multivariate Imputation by Chained Equation (MICE)**: This is a statistical technique for imputing missing values by modeling each feature with missing values as a function of other features in a round-robin fashion.\n",
     "\n",
-    "Remember, it's important to understand why data is missing before treating it, as data could be missing for a variety of reasons, and understanding the underlying reason will help you make the best decision.  \n",
+    "It's important to understand why data is missing before treating it, as data could be missing for a variety of reasons, and understanding the underlying reason will help you make the best decision.  \n",
     "\n",
     "Here we use the simplest method of dealing with rows that have some missing values, deletion."
    ]
@@ -627,7 +627,97 @@
     "\n",
     "6. **Evaluate the Model**: Finally, once you have a model and have tuned its hyperparameters, you'll want to evaluate the model using an appropriate metric. This could be accuracy, precision, recall, F1-score, ROC-AUC, mean squared error, etc., depending on the problem and the business context.\n",
     "\n",
-    "Remember, there is no one-size-fits-all algorithm or model in machine learning. The best approach often depends on the specific problem, the available data, and the context.\n",
+    "There is no one-size-fits-all algorithm or model in machine learning. The best approach often depends on the specific problem, the available data, and the context.\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Classes of Supervised Machine Learning Approaches\n",
+    "\n",
+    "1. **Classification**\n",
+    "    - **Purpose**: Predict a categorical label.\n",
+    "    - **Subtypes**:\n",
+    "        - **Binary Classification**: Predicts one of two possible outcomes (e.g., Spam or Not Spam).\n",
+    "        - **Multiclass Classification**: Predicts one of more than two possible outcomes (e.g., predicting digits 0 through 9).\n",
+    "        - **Multilabel Classification**: Assigns multiple binary tags or classes (e.g., a news article being both \"Politics\" and \"International\").\n",
+    "    - **Common Algorithms**: Logistic Regression, Decision Trees, Support Vector Machines, Neural Networks, Random Forest, Naive Bayes, k-Nearest Neighbors.\n",
+    "\n",
+    "2. **Regression**\n",
+    "    - **Purpose**: Predict a continuous or quantitative output.\n",
+    "    - **Common Algorithms**: Linear Regression, Ridge Regression, Lasso Regression, Polynomial Regression, Decision Trees (for regression), Random Forest (for regression), Neural Networks, Support Vector Regression.\n",
+    "\n",
+    "3. **Ranking**\n",
+    "    - **Purpose**: Predict an ordering among a set of items.\n",
+    "    - **Use Cases**: Search engine result ranking, recommendation systems.\n",
+    "    - **Common Algorithms**: RankNet, LambdaMART, RankBoost.\n",
+    "\n",
+    "4. **Time Series Forecasting**\n",
+    "    - **Purpose**: Predict future values based on previously observed values in a time sequence.\n",
+    "    - **Common Algorithms**: ARIMA, Exponential Smoothing State Space Model (ETS), Prophet, Long Short-Term Memory (LSTM) networks, Recurrent Neural Networks (RNN).\n",
+    "\n",
+    "5. **Anomaly Detection** (sometimes considered a subset of classification)\n",
+    "    - **Purpose**: Identify rare items or events differing significantly from the majority.\n",
+    "    - **Use Cases**: Fraud detection, network security, fault detection.\n",
+    "    - **Common Algorithms**: One-Class SVM, Isolation Forest, Elliptic Envelope, Autoencoders.\n",
+    "\n",
+    "6. **Sequence Labeling**\n",
+    "    - **Purpose**: Assign a label to each member in a sequence.\n",
+    "    - **Use Cases**: Part-of-speech tagging, Named Entity Recognition (NER).\n",
+    "    - **Common Algorithms**: Hidden Markov Models (HMM), Conditional Random Fields (CRF), LSTM, Bidirectional LSTM.\n",
+    "\n",
+    "The choice of a supervised learning approach largely depends on the nature of the problem and the data. Predicting the price of a house based on its features would be a regression problem, while determining if an email is spam would be a binary classification problem.\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Classes of Unsupervised Machine Learning Approaches\n",
+    "\n",
+    "1. **Clustering**\n",
+    "    - **Purpose**: Group data points that are similar to each other.\n",
+    "    - **Subtypes**:\n",
+    "        - **K-Means**: Partition data into k distinct, non-overlapping subsets (clusters).\n",
+    "        - **Hierarchical Clustering**: Builds a tree of clusters. Useful for understanding hierarchical relationships in data.\n",
+    "        - **DBSCAN (Density-Based Spatial Clustering of Applications with Noise)**: Groups together data points that are close to each other based on a distance measure and a minimum number of data points. It also marks as outliers the points that are in low-density regions.\n",
+    "        - **Gaussian Mixture Models**: Assumes data is generated from a mixture of several Gaussian distributions.\n",
+    "\n",
+    "2. **Dimensionality Reduction**\n",
+    "    - **Purpose**: Reduce the number of variables or features, while preserving as much information as possible.\n",
+    "    - **Common Algorithms**:\n",
+    "        - **PCA (Principal Component Analysis)**: Linear dimensionality reduction using Singular Value Decomposition.\n",
+    "        - **t-SNE (t-Distributed Stochastic Neighbor Embedding)**: Reduces dimensionality while keeping similar instances close and dissimilar instances apart.\n",
+    "        - **UMAP (Uniform Manifold Approximation and Projection)**: Effective for visualization in lower dimensions.\n",
+    "\n",
+    "3. **Association Rule Learning**\n",
+    "    - **Purpose**: Discover interesting relations between variables in databases.\n",
+    "    - **Common Algorithms**:\n",
+    "        - **Apriori**: Find the most common item sets and derive association rules.\n",
+    "        - **Eclat**: A depth-first search algorithm used to find frequent item sets.\n",
+    "  \n",
+    "4. **Anomaly Detection** (can be both supervised and unsupervised)\n",
+    "    - **Purpose**: Detect abnormal patterns that do not conform to expected behavior.\n",
+    "    - **Common Algorithms**: One-Class SVM, Isolation Forest, Local Outlier Factor (LOF).\n",
+    "\n",
+    "5. **Neural Networks & Deep Learning (unsupervised variants)**\n",
+    "    - **Purpose**: Uncover patterns in data using architectures inspired by the human brain.\n",
+    "    - **Common Algorithms**:\n",
+    "        - **Autoencoders**: Neural networks that aim to copy their inputs to their outputs. They compress the input into a compact internal representation and then try to reconstruct the input from this representation.\n",
+    "        - **Generative Adversarial Networks (GANs)**: Comprise two networks, a generator and a discriminator, which work against each other to generate data samples.\n",
+    "\n",
+    "The objective of unsupervised learning is to explore the underlying structure of data. Whether you're trying to segment customers, reduce the dimensions of data for visualization, or find association rules in transaction data, unsupervised learning can provide valuable insights.\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In this notebook we are using a supiversed learning approach to build a model that can predict the outcome of ergot on an individual sample basis based on the weather and district.  \n",
     "\n",
     "Below we show how to set up RandomForest classifier models using sklearn, imblearn, and xgboost library implementations. In this example we are comparing different random forest implementations provided by different libraries. We will use the same hyperparameters for all the models. We will also use the same train and test data for all the models. We will use the same random_state.  \n",
     "\n",
