--- a/src/ModelBuilder.ipynb
+++ b/src/ModelBuilder.ipynb
@@ -415,7 +415,6 @@
     "\n",
     "3. [**Combination methods**](https://imbalanced-learn.org/stable/references/combine.html): These are a combination of over-sampling and under-sampling.\n",
     "\n",
-    "The library `imblearn` provides many methods to handle imbalanced datasets, such as the above-mentioned techniques.\n",
     "\n",
     "It's important to remember that there's no guarantee that over-sampling or under-sampling will improve model performance, and these techniques may not always be appropriate. The choice to use balancing methods should be driven by the specific problem context and a thorough exploratory data analysis (EDA).\n",
     "\n",
@@ -534,7 +533,7 @@
     "\n",
     "By combining over-sampling (adding instances) and under-sampling (removing instances), SMOTEENN tends to provide a well-balanced class distribution and better performance on imbalanced datasets.\n",
     "\n",
-    "However, it's important to keep in mind that no method is universally best for all imbalanced datasets. The appropriate method should be chosen based on the dataset characteristics and the learning algorithm being used.\n"
+    "It's important to keep in mind that no method is universally best for all imbalanced datasets. The appropriate method should be chosen based on the dataset characteristics and the learning algorithm being used.\n"
    ]
   },
   {
