--- a/src/ModelBuilder.ipynb
+++ b/src/ModelBuilder.ipynb
@@ -13,23 +13,17 @@
     "\n",
     "Here are some key features:\n",
     "\n",
-    "1. Code Cells\n",
-    "Jupyter Notebooks support cells to write and execute programs. These cells can run multiple languages directly within the notebook.\n",
+    "1. Code Cells: Jupyter Notebooks support cells to write and execute programs. These cells can run multiple languages directly within the notebook.\n",
     "\n",
-    "2. Markdown Cells\n",
-    "In addition to code, you can also use Markdown cells to include formatted text using markdown syntax. It supports different heading levels, bold, italics, hyperlinks, and more. This is helpful for documenting your computational workflows in a readable format.\n",
+    "2. Markdown Cells: In addition to code, you can also use Markdown cells to include formatted text using markdown syntax. It supports different heading levels, bold, italics, hyperlinks, and more. This is helpful for documenting your computational workflows in a readable format.\n",
     "\n",
-    "3. Interactive Output\n",
-    "Code in Jupyter can produce rich, interactive outputs like HTML, images, videos, LaTeX, custom MIME types, which is particularly useful for data exploration and presenting results.\n",
+    "3. Interactive Output: Code in Jupyter can produce rich, interactive outputs like HTML, images, videos, LaTeX, custom MIME types, which is particularly useful for data exploration and presenting results.\n",
     "\n",
-    "4. Integration with Big Data Tools\n",
-    "Jupyter has built-in support for big data tools like Apache Spark, allowing you to write and execute Spark code in a notebook cell.\n",
+    "4. Integration with Big Data Tools: Jupyter has built-in support for big data tools like Apache Spark, allowing you to write and execute Spark code in a notebook cell.\n",
     "\n",
-    "5. Support for Multiple Programming Languages\n",
-    "Although \"Jupyter\" stands for Julia, Python, and R, the notebook supports many other languages, thus making it a versatile tool for polyglot data analysis.\n",
+    "5. Support for Multiple Programming Languages: Although \"Jupyter\" stands for Julia, Python, and R, the notebook supports many other languages, thus making it a versatile tool for polyglot data analysis.\n",
     "\n",
-    "6. Sharing and Conversion\n",
-    "Jupyter notebooks can be easily shared and converted to a number of open standard output formats such as HTML, PDF, LaTeX, etc.\n",
+    "6. Sharing and Conversion: Jupyter notebooks can be easily shared and converted to a number of open standard output formats such as HTML, PDF, LaTeX, etc.\n",
     "\n",
     "Given these features and the ability to add in-line comments and share notebooks easily, Jupyter Notebook has become a popular choice for teaching and collaborative data analysis projects.\n",
     "\n",
