--- a/src/Models/MLP/MLPStation.ipynb
+++ b/src/Models/MLP/MLPStation.ipynb
@@ -53,8 +53,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "tensorflow.config.set_visible_devices([], 'GPU')  # Hide GPU devices\n",
-    "tensorflow.config.set_visible_devices(tensorflow.config.list_physical_devices('CPU'), 'CPU')  # Show CPU devices"
+    "tensorflow.config.set_visible_devices([], \"GPU\")  # Hide GPU devices\n",
+    "tensorflow.config.set_visible_devices(\n",
+    "    tensorflow.config.list_physical_devices(\"CPU\"), \"CPU\"\n",
+    ")  # Show CPU devices"
    ]
   },
   {
@@ -147,6 +149,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -171,6 +174,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -185,7 +189,9 @@
    "source": [
     "drop_features = [\"year\"]\n",
     "target_variable = \"downgrade\"\n",
-    "X_train, X_val, X_test, y_train, y_val, y_test = splitData(datasetDf, drop_features, target_variable, 2019,0.2, False)"
+    "X_train, X_val, X_test, y_train, y_val, y_test = splitData(\n",
+    "    datasetDf, drop_features, target_variable, 2019, 0.2, False\n",
+    ")"
    ]
   },
   {
@@ -278,17 +284,32 @@
     "# use this model if you want to see the accuray\n",
     "def build_model(hp):\n",
     "    model = keras.Sequential()\n",
-    "    model.add(Dense(units=hp.Int('units_input', min_value=32, max_value=256, step=32),\n",
-    "                           activation='relu', input_shape=(X_train.shape[1],)))\n",
-    "    for i in range(hp.Int('num_layers', min_value=1, max_value=5)):\n",
-    "        model.add(Dense(units=hp.Int(f'units_{i}', min_value=32, max_value=256, step=32),\n",
-    "                               activation='relu'))\n",
-    "    model.add(Dense(1, activation='sigmoid'))\n",
+    "    model.add(\n",
+    "        Dense(\n",
+    "            units=hp.Int(\"units_input\", min_value=32, max_value=256, step=32),\n",
+    "            activation=\"relu\",\n",
+    "            input_shape=(X_train.shape[1],),\n",
+    "        )\n",
+    "    )\n",
+    "    for i in range(hp.Int(\"num_layers\", min_value=1, max_value=5)):\n",
+    "        model.add(\n",
+    "            Dense(\n",
+    "                units=hp.Int(f\"units_{i}\", min_value=32, max_value=256, step=32),\n",
+    "                activation=\"relu\",\n",
+    "            )\n",
+    "        )\n",
+    "    model.add(Dense(1, activation=\"sigmoid\"))\n",
     "\n",
     "    # Compile the model with the desired optimizer, loss, and metrics\n",
-    "    model.compile(optimizer=keras.optimizers.Adam(hp.Choice('learning_rate', values=[1e-2, 1e-3, 1e-4])),\n",
-    "                  loss='binary_crossentropy', metrics=['accuracy'])\n",
+    "    model.compile(\n",
+    "        optimizer=keras.optimizers.Adam(\n",
+    "            hp.Choice(\"learning_rate\", values=[1e-2, 1e-3, 1e-4])\n",
+    "        ),\n",
+    "        loss=\"binary_crossentropy\",\n",
+    "        metrics=[\"accuracy\"],\n",
+    "    )\n",
     "    return model\n",
+    "\n",
     "\n",
     "# # use this moel if you want to see the auc\n",
     "# def build_model(hp):\n",
@@ -315,12 +336,13 @@
     "tuner = BayesianOptimization(\n",
     "    build_model,\n",
     "    # objective=kt.Objective(\"val_auc\", direction=\"max\"),           # if you want to maximize AUC\n",
-    "    objective=\"val_accuracy\",                                       # if you want to maximize accuracy\n",
+    "    objective=\"val_accuracy\",  # if you want to maximize accuracy\n",
     "    max_trials=10,\n",
     "    overwrite=True,\n",
     "    executions_per_trial=2,\n",
-    "    directory='data/BayesianOptimization',\n",
-    "    project_name='ergot_random_search')"
+    "    directory=\"data/BayesianOptimization\",\n",
+    "    project_name=\"ergot_random_search\",\n",
+    ")"
    ]
   },
   {
@@ -335,6 +357,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -373,10 +396,18 @@
    "source": [
     "# using  validation_data\n",
     "\n",
-    "history = model.fit(X_train_rs, y_train_rs, epochs=EPOCHES, batch_size=64, validation_data=(X_val, y_val), verbose=1)"
+    "history = model.fit(\n",
+    "    X_train_rs,\n",
+    "    y_train_rs,\n",
+    "    epochs=EPOCHES,\n",
+    "    batch_size=64,\n",
+    "    validation_data=(X_val, y_val),\n",
+    "    verbose=1,\n",
+    ")"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -392,30 +423,30 @@
     "# function to plot the training and validation loss for each epoch\n",
     "def evaluate_model(history):\n",
     "    # Get the training and validation loss from the history\n",
-    "    training_loss = history.history['loss']\n",
-    "    validation_loss = history.history['val_loss']\n",
+    "    training_loss = history.history[\"loss\"]\n",
+    "    validation_loss = history.history[\"val_loss\"]\n",
     "\n",
     "    # Get the training and validation accuracy from the history\n",
-    "    training_accuracy = history.history['accuracy']\n",
-    "    validation_accuracy = history.history['val_accuracy']\n",
+    "    training_accuracy = history.history[\"accuracy\"]\n",
+    "    validation_accuracy = history.history[\"val_accuracy\"]\n",
     "\n",
     "    # Plot the training and validation loss\n",
     "    plt.figure(figsize=(20, 6))\n",
     "    plt.subplot(1, 2, 1)\n",
-    "    plt.plot(training_loss, label='Training Loss')\n",
-    "    plt.plot(validation_loss, label='Validation Loss')\n",
-    "    plt.xlabel('Epoch')\n",
-    "    plt.ylabel('Loss')\n",
-    "    plt.title('Training and Validation Loss')\n",
+    "    plt.plot(training_loss, label=\"Training Loss\")\n",
+    "    plt.plot(validation_loss, label=\"Validation Loss\")\n",
+    "    plt.xlabel(\"Epoch\")\n",
+    "    plt.ylabel(\"Loss\")\n",
+    "    plt.title(\"Training and Validation Loss\")\n",
     "    plt.legend()\n",
     "\n",
     "    # Plot the training and validation accuracy\n",
     "    plt.subplot(1, 2, 2)\n",
-    "    plt.plot(training_accuracy, label='Training Accuracy')\n",
-    "    plt.plot(validation_accuracy, label='Validation Accuracy')\n",
-    "    plt.xlabel('Epoch')\n",
-    "    plt.ylabel('Accuracy')\n",
-    "    plt.title('Training and Validation Accuracy')\n",
+    "    plt.plot(training_accuracy, label=\"Training Accuracy\")\n",
+    "    plt.plot(validation_accuracy, label=\"Validation Accuracy\")\n",
+    "    plt.xlabel(\"Epoch\")\n",
+    "    plt.ylabel(\"Accuracy\")\n",
+    "    plt.title(\"Training and Validation Accuracy\")\n",
     "    plt.legend()\n",
     "\n",
     "    plt.show()"
