--- a/src/Models/MLP/MLPSatellitePrevErg.ipynb
+++ b/src/Models/MLP/MLPSatellitePrevErg.ipynb
@@ -336,12 +336,13 @@
     "tuner = BayesianOptimization(\n",
     "    build_model,\n",
     "    # objective=kt.Objective(\"val_auc\", direction=\"max\"),           # if you want to maximize AUC\n",
-    "    objective=\"val_accuracy\",                                       # if you want to maximize accuracy\n",
+    "    objective=\"val_accuracy\",  # if you want to maximize accuracy\n",
     "    max_trials=10,\n",
     "    overwrite=True,\n",
     "    executions_per_trial=2,\n",
-    "    directory='data/BayesianOptimization',\n",
-    "    project_name='ergot_random_search')"
+    "    directory=\"data/BayesianOptimization\",\n",
+    "    project_name=\"ergot_random_search\",\n",
+    ")"
    ]
   },
   {
