--- a/src/Models/LSTM/LSTMStation.ipynb
+++ b/src/Models/LSTM/LSTMStation.ipynb
@@ -269,7 +269,54 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def create_io_pair(\n",
+    "    X_train: np.ndarray, Y_train: np.ndarray, k=1\n",
+    ") -> \"tuple(np.ndarray, np.ndarray)\":\n",
+    "    \"\"\"\n",
+    "    k: time step\n",
+    "    return: (input, output) pairs from given data\n",
+    "    \"\"\"\n",
+    "    windows = []\n",
+    "    windows_y = []\n",
+    "\n",
+    "    for i, sequence in enumerate(X_train):\n",
+    "        len_seq = len(sequence)\n",
+    "        for window_start in range(0, len_seq - k + 1):\n",
+    "            window_end = window_start + k\n",
+    "            window = sequence[window_start:window_end]\n",
+    "            windows.append(window)\n",
+    "            windows_y.append(Y_train[i])\n",
+    "    return (np.array(windows), np.array(windows_y))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_train = np.array(trainDf.drop(columns=[\"downgrade\"]))\n",
+    "Y_train = np.array(trainDf[\"downgrade\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_train = X_train.reshape(X_train.shape[0], X_train.shape[1], 1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x_train, y_train = create_io_pair(X_train, Y_train, k=100)"
+   ]
   },
   {
    "attachments": {},
@@ -320,6 +367,15 @@
    "metadata": {},
    "source": [
     "##### <u>**Step 5.2**</u>: Fit the training data to the model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model = LSTM_model(x_train.shape[1], x_train.shape[2], units=50, dropout=0.2, optimizer='adam')"
    ]
   },
   {
